# gearkit

./: CMakeLists.txt  main.cpp
base/: Singleton.h  locker.h
buffer/: Buffer.cpp  Buffer.h  BufferFactory.h  CMakeLists.txt
net/: .Socket.cpp.swp  CMakeLists.txt  Socket.cpp  Socket.h  SocketClientWin.cpp
